--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <meta property="og:title" content="Inventario-Gimanasio la Monstaña-Sebastian Correa">
     <meta property="og:description" 
         content="Bienvenidos al departamento de tecnologia del colegio Gimnasio la Monataña, este sitio web te permite ordenar el inventario de computadores y suministrar al estudiante o profesor el prestamos de los articulos correspondientes del colegio.">
-    <meta property="og:image" content="https://sebas9708Co.github.io/images/tecnolo.jpg">
+    <meta property="og:image" content="https://sebas9708Co.github.io/images/ttecnolo.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://sebas9708Co.github.io">
     <meta property="twitter:title" content="Inventario-Gimanasio la Monstaña-Sebastian Correa">
     <meta property="twitter:description" 
         content="Bienvenidos al departamento de tecnologia del colegio Gimnasio la Monataña, este sitio web te permite ordenar el inventario de computadores y suministrar al estudiante o profesor el prestamos de los articulos correspondientes del colegio.">
-    <meta property="twitter:image" content="https://sebas9708Co.github.io/images/tecnolo.jpg">
+    <meta property="twitter:image" content="https://sebas9708Co.github.io/images/ttecnolo.jpg">
    
 <body>
     <header class="hero">
