--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="knowledge__texts">
                     <h2 class="subtitle">Ahorra Tiempo Con Este Aplicativo Web Mucho Mas Facil De Utilizar</h2>
                     <p class="knowledge__paragraph">Puedes Organizar De Una Manera Mucho Mas Eficiente Tu Inventario Y  Mucho Mas Organizado Los Prestamos Que Soliciten Los Alumnos Y Los Profesores Del Colegio.</p>
-                    <a href="#" class="cta">Entra Al Inventario</a>
+                    <a href="https://docs.google.com/spreadsheets/d/1emJeRATn22dj-eE14bgdmH4YDr8hQKrGiVdD-GIz0Ig/edit#gid=532949306" class="cta">Entra Al Inventario</a>
                 </div>
 
                 <figure class="knowledge__picture">
